Refactoring local variable management.